# gltfpp

./: .gitignore  CMakeLists.txt  vcpkg.json
src/gltf++/: CMakeLists.txt  gltf.h  model.h  write.cpp  write.h
tests/: CMakeLists.txt  test_gltf.cpp
